Moving logic on BuilderClass from JavaCodeGenerator to Enhancers